--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <head>
         <title>Lab 02: About Me, A Guessing Game</title>
         <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style.css">   
     </head>
+
     <body>
         <header></header>
         <main>
@@ -15,5 +16,7 @@
         </main>
         <footer></footer>
 
+        <script src="js/app.js"></script>
     </body>
+    
 </html>
