--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     </head>
 
     <body>
-        <header></header>
+        <header>
+            <h1>About Me</h1>
+        </header>
         <main>
             <p id="bio">
-                My name is Spencer. I am currently attending CodeFellows for Javascript. I have an undergrad in Nutrition and Exercise Science. I've worked in admin, customer service, and production. My goal is to complete CodeFellows 401 for .js and become a full-stack software developer.
+                Hi, my name is Spencer. I am currently attending CodeFellows for Javascript. I have an undergrad in Nutrition and Exercise Science. I've worked in admin, customer service, and production. My goal is to complete CodeFellows 401 for .js and become a full-stack software developer.
             </p>
         </main>
         <footer></footer>
