adds top ten list

--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
             <p id="bio">
                 Hi, my name is Spencer. I am currently attending CodeFellows for Javascript. I have an undergrad in Nutrition and Exercise Science. I've worked in admin, customer service, and production. My goal is to complete CodeFellows 401 for .js and become a full-stack software developer.
             </p>
+
+            <h2>Top Ten Places I Want to Visit</h2>
+            <ol>
+                <li>Barcelona</li>
+                <li>Siberia</li>
+                <li>New Zeland</li>
+                <li>Indonesia</li>
+                <li>Nepal</li>
+                <li>Ecuador</li>
+                <li>Patagonia</li>
+                <li>Paris</li>
+                <li>Norway</li>
+                <li>Netherlands</li>
+            </ol>
         </main>
         <footer></footer>
 
