converts bio to unordered list

--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
         </header>
         <main>
             <p id="bio">
-                Hi, my name is Spencer. I am currently attending CodeFellows for Javascript. I have an undergrad in Nutrition and Exercise Science. I've worked in admin, customer service, and production. My goal is to complete CodeFellows 401 for .js and become a full-stack software developer.
+            <ul>
+                <li>My name is Spencer Tower.</li>
+                <li>I am currently attending CodeFellows for Javascript.</li>
+                <li>I have an undergrad in Nutrition and Exercise Science.</li>
+                <li>I've worked in admin, customer service, and production.</li>
+                <li>My goal is to complete CodeFellows 401 for .js and become a full-stack software developer.</li>
+            </ul>
             </p>
 
             <h2>Top Ten Places I Want to Visit</h2>
