--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li>New Zeland</li>
                 <li>Indonesia</li>
                 <li>Nepal</li>
-                <li>Ecuador</li>
+                <li>Peru</li>
                 <li>Patagonia</li>
                 <li>Paris</li>
                 <li>Norway</li>
