adds css update

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
             <h1>About Me</h1>
         </header>
         <main>
-            <p id="bio">
-            <ul>
-                <li>My name is Spencer Tower.</li>
-                <li>I am currently attending CodeFellows for Javascript.</li>
-                <li>I have an undergrad in Nutrition and Exercise Science.</li>
-                <li>I've worked in admin, customer service, and production.</li>
-                <li>My goal is to complete CodeFellows 401 for .js and become a full-stack software developer.</li>
-            </ul>
+            <p>
+                <ul id="bio">
+                    <li>My name is Spencer Tower.</li>
+                    <li>I am currently attending CodeFellows for Javascript.</li>
+                    <li>I have an undergrad in Nutrition and Exercise Science.</li>
+                    <li>I've worked in admin, customer service, and production.</li>
+                    <li>My goal is to complete CodeFellows 401 for .js and become a full-stack software developer.</li>
+                </ul>
             </p>
 
             <h2>Top Ten Places I Want to Visit</h2>
-            <ol>
+            <ol id="topten">
                 <li>Barcelona</li>
                 <li>Siberia</li>
                 <li>New Zeland</li>
