refactors questions into functions

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li>My goal is to complete CodeFellows 401 for .js and become a full-stack software developer.</li>
                 </ul>
             </p>
-
+            <button id="startbutton" onclick="">
             <h2>Top Ten Places I Want to Visit</h2>
             <ol id="topten">
                 <li>Barcelona</li>
